// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click option 1`] = `
<div class="ca2-dropdown-menu ca2-hairline--top-bottom">
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title"><div class="ca2-ellipsis">B</div></span></div>
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title"><div class="ca2-ellipsis">B</div></span></div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px;">
      <div class="ca2-overlay" style="z-index: 2013; animation-duration: 0.2s; position: absolute;" name="ca2-fade"></div>
      <div class="ca2-popup ca2-popup--top ca2-dropdown-item__content" style="transition-duration: 0.2s; display: none; z-index: 2014;" name="ca2-popup-slide-top">
        <div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-dropdown-item__option">
          <div class="ca2-cell__title"><span>A</span></div>
        </div>
        <div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-dropdown-item__option ca2-dropdown-item__option--active">
          <div class="ca2-cell__title"><span>B</span></div>
          <div class="ca2-cell__value"><i class="ca2-icon ca2-icon-success ca2-dropdown-item__icon">
              <!----></i></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`close-on-click-outside 1`] = `
<div class="ca2-dropdown-menu ca2-hairline--top-bottom">
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title"><div class="ca2-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title"><div class="ca2-ellipsis">A</div></span></div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px;">
      <div class="ca2-popup ca2-popup--top ca2-dropdown-item__content" style="transition-duration: 0.2s; display: none;" name="ca2-popup-slide-top">
        <div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-dropdown-item__option ca2-dropdown-item__option--active">
          <div class="ca2-cell__title"><span>A</span></div>
          <div class="ca2-cell__value"><i class="ca2-icon ca2-icon-success ca2-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-dropdown-item__option">
          <div class="ca2-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`destroy one item 1`] = `
<div class="ca2-dropdown-menu ca2-hairline--top-bottom">
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title"><div class="ca2-ellipsis">A</div></span></div>
  <!---->
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`didn\`t find matched option 1`] = `
<div class="ca2-dropdown-menu ca2-hairline--top-bottom">
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title"><div class="ca2-ellipsis"></div></span></div>
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title"><div class="ca2-ellipsis"></div></span></div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`direction up 1`] = `
<div class="ca2-dropdown-menu ca2-hairline--top-bottom">
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title ca2-dropdown-menu__title--down"><div class="ca2-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title ca2-dropdown-menu__title--down"><div class="ca2-ellipsis">A</div></span></div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--up" style="bottom: 0px; display: none;">
      <!---->
    </div>
  </div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--up" style="bottom: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`direction up 2`] = `
<div class="ca2-dropdown-menu ca2-hairline--top-bottom">
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title ca2-dropdown-menu__title--active"><div class="ca2-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title ca2-dropdown-menu__title--down"><div class="ca2-ellipsis">A</div></span></div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--up" style="bottom: 1000px;">
      <div class="ca2-popup ca2-popup--bottom ca2-dropdown-item__content" style="transition-duration: 0.2s;" name="ca2-popup-slide-bottom">
        <div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-dropdown-item__option ca2-dropdown-item__option--active">
          <div class="ca2-cell__title"><span>A</span></div>
          <div class="ca2-cell__value"><i class="ca2-icon ca2-icon-success ca2-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-dropdown-item__option">
          <div class="ca2-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--up" style="bottom: 1000px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`disable close-on-click-outside 1`] = `
<div class="ca2-dropdown-menu ca2-hairline--top-bottom">
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title ca2-dropdown-menu__title--active ca2-dropdown-menu__title--down"><div class="ca2-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title"><div class="ca2-ellipsis">A</div></span></div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px;">
      <div class="ca2-popup ca2-popup--top ca2-dropdown-item__content" style="transition-duration: 0.2s;" name="ca2-popup-slide-top">
        <div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-dropdown-item__option ca2-dropdown-item__option--active">
          <div class="ca2-cell__title"><span>A</span></div>
          <div class="ca2-cell__value"><i class="ca2-icon ca2-icon-success ca2-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-dropdown-item__option">
          <div class="ca2-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`disable dropdown item 1`] = `
<div class="ca2-dropdown-menu ca2-hairline--top-bottom">
  <div role="button" tabindex="-1" class="ca2-dropdown-menu__item ca2-dropdown-menu__item--disabled"><span class="ca2-dropdown-menu__title"><div class="ca2-ellipsis">A</div></span></div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`render option icon 1`] = `
<div class="ca2-dropdown-menu ca2-hairline--top-bottom">
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title ca2-dropdown-menu__title--active ca2-dropdown-menu__title--down"><div class="ca2-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title"><div class="ca2-ellipsis">A</div></span></div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px;">
      <div class="ca2-popup ca2-popup--top ca2-dropdown-item__content" style="transition-duration: 0.2s;" name="ca2-popup-slide-top">
        <div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-dropdown-item__option ca2-dropdown-item__option--active"><i class="ca2-icon ca2-icon-success ca2-cell__left-icon">
            <!----></i>
          <div class="ca2-cell__title"><span>A</span></div>
          <div class="ca2-cell__value"><i class="ca2-icon ca2-icon-success ca2-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-dropdown-item__option"><i class="ca2-icon ca2-icon-success ca2-cell__left-icon">
            <!----></i>
          <div class="ca2-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`show dropdown item 1`] = `
<div class="ca2-dropdown-menu ca2-hairline--top-bottom">
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title ca2-dropdown-menu__title--active ca2-dropdown-menu__title--down"><div class="ca2-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title"><div class="ca2-ellipsis">A</div></span></div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px;">
      <div class="ca2-popup ca2-popup--top ca2-dropdown-item__content" style="transition-duration: 0.2s;" name="ca2-popup-slide-top">
        <div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-dropdown-item__option ca2-dropdown-item__option--active">
          <div class="ca2-cell__title"><span>A</span></div>
          <div class="ca2-cell__value"><i class="ca2-icon ca2-icon-success ca2-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-dropdown-item__option">
          <div class="ca2-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`show dropdown item 2`] = `
<div class="ca2-dropdown-menu ca2-hairline--top-bottom">
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title"><div class="ca2-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="ca2-dropdown-menu__item"><span class="ca2-dropdown-menu__title ca2-dropdown-menu__title--active ca2-dropdown-menu__title--down"><div class="ca2-ellipsis">A</div></span></div>
  <div>
    <div class="ca2-dropdown-item ca2-dropdown-item--down" style="top: 0px;">
      <div class="ca2-popup ca2-popup--top ca2-dropdown-item__content" style="transition-duration: 0s; display: none;" name="ca2-popup-slide-top">
        <div role="button" tabindex="0" class="ca2-cell ca2-cell--clickable ca2-dropdown-item__option ca2-dropdown-item__option--active">
          <div class="ca2-cell__title"><span>A</span></div>
          <div class="zv-cell__value"><i class="zv-icon zv-icon-success zv-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="zv-cell zv-cell--clickable zv-dropdown-item__option">
          <div class="zv-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="zv-dropdown-item zv-dropdown-item--down" style="top: 0px;">
      <div class="zv-popup zv-popup--top zv-dropdown-item__content" style="transition-duration: 0.2s;" name="zv-popup-slide-top">
        <div role="button" tabindex="0" class="zv-cell zv-cell--clickable zv-dropdown-item__option zv-dropdown-item__option--active">
          <div class="zv-cell__title"><span>A</span></div>
          <div class="zv-cell__value"><i class="zv-icon zv-icon-success zv-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="zv-cell zv-cell--clickable zv-dropdown-item__option">
          <div class="zv-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`show dropdown item 3`] = `
<div class="zv-dropdown-menu zv-hairline--top-bottom">
  <div role="button" tabindex="0" class="zv-dropdown-menu__item"><span class="zv-dropdown-menu__title"><div class="zv-ellipsis">A</div></span></div>
  <div role="button" tabindex="0" class="zv-dropdown-menu__item"><span class="zv-dropdown-menu__title"><div class="zv-ellipsis">A</div></span></div>
  <div>
    <div class="zv-dropdown-item zv-dropdown-item--down" style="top: 0px;">
      <div class="zv-popup zv-popup--top zv-dropdown-item__content" style="transition-duration: 0s; display: none;" name="zv-popup-slide-top">
        <div role="button" tabindex="0" class="zv-cell zv-cell--clickable zv-dropdown-item__option zv-dropdown-item__option--active">
          <div class="zv-cell__title"><span>A</span></div>
          <div class="zv-cell__value"><i class="zv-icon zv-icon-success zv-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="zv-cell zv-cell--clickable zv-dropdown-item__option">
          <div class="zv-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
  <div>
    <div class="zv-dropdown-item zv-dropdown-item--down" style="top: 0px;">
      <div class="zv-popup zv-popup--top zv-dropdown-item__content" style="transition-duration: 0.2s; display: none;" name="zv-popup-slide-top">
        <div role="button" tabindex="0" class="zv-cell zv-cell--clickable zv-dropdown-item__option zv-dropdown-item__option--active">
          <div class="zv-cell__title"><span>A</span></div>
          <div class="zv-cell__value"><i class="zv-icon zv-icon-success zv-dropdown-item__icon">
              <!----></i></div>
        </div>
        <div role="button" tabindex="0" class="zv-cell zv-cell--clickable zv-dropdown-item__option">
          <div class="zv-cell__title"><span>B</span></div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`title prop 1`] = `
<div class="zv-dropdown-menu zv-hairline--top-bottom">
  <div role="button" tabindex="0" class="zv-dropdown-menu__item"><span class="zv-dropdown-menu__title"><div class="zv-ellipsis">Title</div></span></div>
  <div role="button" tabindex="0" class="zv-dropdown-menu__item"><span class="zv-dropdown-menu__title"><div class="zv-ellipsis">Title</div></span></div>
  <div>
    <div class="zv-dropdown-item zv-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
  <div>
    <div class="zv-dropdown-item zv-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`title slot 1`] = `
<div class="zv-dropdown-menu zv-hairline--top-bottom">
  <div role="button" tabindex="0" class="zv-dropdown-menu__item"><span class="zv-dropdown-menu__title"><div class="zv-ellipsis">
            Custom Title
          </div></span></div>
  <div>
    <div class="zv-dropdown-item zv-dropdown-item--down" style="top: 0px; display: none;">
      <!---->
    </div>
  </div>
</div>
`;

exports[`toggle method 1`] = `
<div class="zv-dropdown-menu zv-hairline--top-bottom">
  <div role="button" tabindex="0" class="zv-dropdown-menu__item"><span class="zv-dropdown-menu__title zv-dropdown-menu__title--active zv-dropdown-menu__title--down"><div class="zv-ellipsis"></div></span></div>
  <div>
    <div class="zv-dropdown-item zv-dropdown-item--down" style="top: 0px;">
      <div class="zv-overlay" style="z-index: 2017; animation-duration: 0s; position: absolute;" name="zv-fade"></div>
      <div class="zv-popup zv-popup--top zv-dropdown-item__content" style="transition-duration: 0s; z-index: 2018;" name="zv-popup-slide-top"></div>
    </div>
  </div>
</div>
`;

exports[`toggle method 2`] = `
<div class="zv-dropdown-menu zv-hairline--top-bottom">
  <div role="button" tabindex="0" class="zv-dropdown-menu__item"><span class="zv-dropdown-menu__title"><div class="zv-ellipsis"></div></span></div>
  <div>
    <div class="zv-dropdown-item zv-dropdown-item--down" style="top: 0px;">
      <div class="zv-popup zv-popup--top zv-dropdown-item__content" style="transition-duration: 0s; z-index: 2018; display: none;" name="zv-popup-slide-top"></div>
    </div>
  </div>
</div>
`;
